// <auto-generated />
using System;
using Hato.Modules.Breeding.Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace Hato.Modules.Breeding.Infrastructure.Persistence.Migrations
{
    [DbContext(typeof(BreedingDbContext))]
    partial class BreedingDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasDefaultSchema("breeding")
                .HasAnnotation("ProductVersion", "8.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("Hato.Modules.Breeding.Domain.Birthing", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateOnly>("BirthDate")
                        .HasColumnType("date")
                        .HasColumnName("birth_date");

                    b.Property<int>("BornAlive")
                        .HasColumnType("integer")
                        .HasColumnName("born_alive");

                    b.Property<int>("BornDead")
                        .HasColumnType("integer")
                        .HasColumnName("born_dead");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<Guid>("DamId")
                        .HasColumnType("uuid")
                        .HasColumnName("dam_id");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<string>("Difficulty")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)")
                        .HasColumnName("difficulty");

                    b.Property<decimal?>("LitterWeight")
                        .HasPrecision(6, 2)
                        .HasColumnType("numeric(6,2)")
                        .HasColumnName("litter_weight");

                    b.Property<int>("Mummified")
                        .HasColumnType("integer")
                        .HasColumnName("mummified");

                    b.Property<string>("Notes")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("notes");

                    b.Property<Guid?>("NursingCohortId")
                        .HasColumnType("uuid")
                        .HasColumnName("nursing_cohort_id");

                    b.Property<Guid?>("PregnancyId")
                        .HasColumnType("uuid")
                        .HasColumnName("pregnancy_id");

                    b.Property<int>("TotalBorn")
                        .HasColumnType("integer")
                        .HasColumnName("total_born");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.Property<DateOnly?>("WeanedAt")
                        .HasColumnType("date")
                        .HasColumnName("weaned_at");

                    b.Property<int?>("WeanedCount")
                        .HasColumnType("integer")
                        .HasColumnName("weaned_count");

                    b.HasKey("Id")
                        .HasName("p_k_birthings");

                    b.HasIndex("BirthDate")
                        .HasDatabaseName("i_x_birthings_birth_date");

                    b.HasIndex("DamId")
                        .HasDatabaseName("i_x_birthings_dam_id");

                    b.HasIndex("NursingCohortId")
                        .HasDatabaseName("i_x_birthings_nursing_cohort_id");

                    b.ToTable("birthings", "breeding");
                });

            modelBuilder.Entity("Hato.Modules.Breeding.Domain.BreedingService", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<decimal?>("BodyConditionScore")
                        .HasPrecision(3, 2)
                        .HasColumnType("numeric(3,2)")
                        .HasColumnName("body_condition_score");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<Guid>("DamId")
                        .HasColumnType("uuid")
                        .HasColumnName("dam_id");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<string>("Notes")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("notes");

                    b.Property<DateOnly>("ServiceDate")
                        .HasColumnType("date")
                        .HasColumnName("service_date");

                    b.Property<string>("ServiceType")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)")
                        .HasColumnName("service_type");

                    b.Property<Guid?>("SireAnimalId")
                        .HasColumnType("uuid")
                        .HasColumnName("sire_animal_id");

                    b.Property<Guid?>("StrawId")
                        .HasColumnType("uuid")
                        .HasColumnName("straw_id");

                    b.Property<string>("Technician")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("technician");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.HasKey("Id")
                        .HasName("p_k_breeding_services");

                    b.HasIndex("DamId")
                        .HasDatabaseName("i_x_breeding_services_dam_id");

                    b.HasIndex("ServiceDate")
                        .HasDatabaseName("i_x_breeding_services_service_date");

                    b.ToTable("breeding_services", "breeding", t =>
                        {
                            t.HasCheckConstraint("CK_BreedingService_SireOrStraw", "(sire_animal_id IS NOT NULL AND straw_id IS NULL) OR (sire_animal_id IS NULL AND straw_id IS NOT NULL)");
                        });
                });

            modelBuilder.Entity("Hato.Modules.Breeding.Domain.NursingCohort", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateOnly?>("ClosedAt")
                        .HasColumnType("date")
                        .HasColumnName("closed_at");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<string>("Notes")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("notes");

                    b.Property<Guid>("SpeciesId")
                        .HasColumnType("uuid")
                        .HasColumnName("species_id");

                    b.Property<DateOnly>("StartedAt")
                        .HasColumnType("date")
                        .HasColumnName("started_at");

                    b.Property<DateOnly?>("SortedAt")
                        .HasColumnType("date")
                        .HasColumnName("sorted_at");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.Property<DateOnly?>("WeanedAt")
                        .HasColumnType("date")
                        .HasColumnName("weaned_at");

                    b.HasKey("Id")
                        .HasName("p_k_nursing_cohorts");

                    b.HasIndex("StartedAt")
                        .HasDatabaseName("i_x_nursing_cohorts_started_at");

                    b.HasIndex("SpeciesId", "ClosedAt")
                        .HasDatabaseName("i_x_nursing_cohorts_species_id_closed_at");

                    b.ToTable("nursing_cohorts", "breeding");
                });

            modelBuilder.Entity("Hato.Modules.Breeding.Domain.Pregnancy", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateOnly>("ConfirmedAt")
                        .HasColumnType("date")
                        .HasColumnName("confirmed_at");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<Guid>("DamId")
                        .HasColumnType("uuid")
                        .HasColumnName("dam_id");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<DateOnly>("ExpectedBirthDate")
                        .HasColumnType("date")
                        .HasColumnName("expected_birth_date");

                    b.Property<string>("Notes")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("notes");

                    b.Property<Guid?>("ServiceId")
                        .HasColumnType("uuid")
                        .HasColumnName("service_id");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)")
                        .HasColumnName("status");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.HasKey("Id")
                        .HasName("p_k_pregnancies");

                    b.HasIndex("DamId")
                        .HasDatabaseName("i_x_pregnancies_dam_id");

                    b.HasIndex("ExpectedBirthDate")
                        .HasDatabaseName("i_x_pregnancies_expected_birth_date");

                    b.ToTable("pregnancies", "breeding");
                });

            modelBuilder.Entity("Hato.Modules.Breeding.Domain.PregnancyCheck", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateOnly>("CheckDate")
                        .HasColumnType("date")
                        .HasColumnName("check_date");

                    b.Property<string>("CheckedBy")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("checked_by");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<Guid>("DamId")
                        .HasColumnType("uuid")
                        .HasColumnName("dam_id");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<string>("Method")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)")
                        .HasColumnName("method");

                    b.Property<string>("Notes")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("notes");

                    b.Property<string>("Result")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)")
                        .HasColumnName("result");

                    b.Property<Guid>("ServiceId")
                        .HasColumnType("uuid")
                        .HasColumnName("service_id");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.HasKey("Id")
                        .HasName("p_k_pregnancy_checks");

                    b.HasIndex("DamId")
                        .HasDatabaseName("i_x_pregnancy_checks_dam_id");

                    b.HasIndex("ServiceId")
                        .HasDatabaseName("i_x_pregnancy_checks_service_id");

                    b.ToTable("pregnancy_checks", "breeding");
                });

            modelBuilder.Entity("Hato.Modules.Breeding.Domain.SemenStraw", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid>("BreedId")
                        .HasColumnType("uuid")
                        .HasColumnName("breed_id");

                    b.Property<string>("BullCode")
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("bull_code");

                    b.Property<string>("BullName")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("bull_name");

                    b.Property<string>("Code")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("code");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid?>("CreatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("created_by");

                    b.Property<int>("CurrentQuantity")
                        .HasColumnType("integer")
                        .HasColumnName("current_quantity");

                    b.Property<DateTimeOffset?>("DeletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("deleted_at");

                    b.Property<int>("InitialQuantity")
                        .HasColumnType("integer")
                        .HasColumnName("initial_quantity");

                    b.Property<string>("Notes")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("notes");

                    b.Property<string>("SupplierName")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("supplier_name");

                    b.Property<DateTimeOffset?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid?>("UpdatedBy")
                        .HasColumnType("uuid")
                        .HasColumnName("updated_by");

                    b.Property<uint>("xmin")
                        .IsConcurrencyToken()
                        .ValueGeneratedOnAddOrUpdate()
                        .HasColumnType("xid")
                        .HasColumnName("xmin");

                    b.HasKey("Id")
                        .HasName("p_k_semen_straws");

                    b.HasIndex("Code")
                        .IsUnique()
                        .HasDatabaseName("i_x_semen_straws_code");

                    b.ToTable("semen_straws", "breeding", t =>
                        {
                            t.HasCheckConstraint("CK_SemenStraw_CurrentQuantityNotNegative", "current_quantity >= 0");
                        });
                });

            modelBuilder.Entity("Hato.Modules.Breeding.Domain.Birthing", b =>
                {
                    b.HasOne("Hato.Modules.Breeding.Domain.NursingCohort", null)
                        .WithMany()
                        .HasForeignKey("NursingCohortId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .HasConstraintName("f_k_birthings_nursing_cohorts_nursing_cohort_id");
                });
#pragma warning restore 612, 618
        }
    }
}
